--- a/src/app/home/tab2/tab2.page.html
+++ b/src/app/home/tab2/tab2.page.html
@@ -14,15 +14,23 @@
 <ion-content>
 
   <ion-list>
-    <ion-item *ngFor="let registro of dataLocalSvc.registros"
-              (click)="abrirRegistro( registro )"
-              detail >
-      <ion-icon color="primary" slot="start" [name]="registro.icon"></ion-icon>
-      <ion-label>
-        <h2>{{ registro.text }}</h2>
-        <p>{{ registro.created | date : 'medium'}}</p>
-      </ion-label>
-    </ion-item>
+    <ion-item-sliding *ngFor="let registro of dataLocalSvc.registros">
+
+      <ion-item-options side="start">
+        <ion-item-option (click)="eliminarRegistro(registro)" color="danger">
+          <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+
+      <ion-item (click)="abrirRegistro( registro )" detail>
+        <ion-icon color="primary" slot="start" [name]="registro.icon"></ion-icon>
+        <ion-label>
+          <h2>{{ registro.text }}</h2>
+          <p>{{ registro.created | date : 'medium'}}</p>
+        </ion-label>
+      </ion-item>
+
+    </ion-item-sliding>
   </ion-list>
 
 </ion-content>
